@@ -1,3 +1,9 @@
+2013-11-26  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* CMakeLists.txt: CMake support from Alan W. Irwin.
+
+	* dbfdump.c: untested reporting for deleted records.
+
 2012-04-10  Frank Warmerdam  <warmerdam@google.com>
 
 	* Shapelib 1.3.0 released.
